examples/type_system/failing/91_adt_nested_pattern_binding_type_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/91_adt_nested_pattern_binding_type_mismatch.flx
// error[E300]: Type Mismatch
//
// I found a type mismatch.
//
//   examples/type_system/failing/91_adt_nested_pattern_binding_type_mismatch.flx:34:25
//    |
// 34 |         Boxed(Ok(v)) -> v + "x",
//    |                         ^^^^^^^
//    |                         ------- this expression has type `Int and String`
//
//    |                         ------- operator operands are known at compile time
//
// Note:
//   expected type: matching '+' operands (Int+Int, Float+Float, or String+String)
//   found type: Int and String
//
// Help:
//   These two types are not compatible.
//   adjust operand types or add explicit conversion
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

// E300: nested constructor-pattern binding keeps concrete field type (`Int`), so String add mismatches.
type Result<T, E> = Ok(T) | Err(E)
type Wrap = Boxed(Result<Int, String>) | Empty

fn bad(w: Wrap) -> Int {
    match w {
        Boxed(Ok(v)) -> v + "x",
        Boxed(Err(_)) -> 0,
        Empty -> 0,
    }
}
